@@ -150,37 +150,6 @@ sub help_screen{
 	exit;
 }
 
-##########################################################################
-## Convert the $value encode in html entity to clear char string.
-##########################################################################
-sub safe_input($) {
-        my $value = shift;
-
-        $value = encode_entities ($value, "'<>&");
-
-        #//Replace the character '\' for the equivalent html entitie
-        $value =~ s/\\/&#92;/gi;
-
-    #// First attempt to avoid SQL Injection based on SQL comments
-    #// Specific for MySQL.
-        $value =~ s/\/\*/&#47;&#42;/gi;
-        $value =~ s/\*\//&#42;&#47;/gi;
-
-        #//Replace ( for the html entitie
-        $value =~ s/\(/&#40;/gi;
-
-        #//Replace ( for the html entitie
-        $value =~ s/\)/&#41;/gi;
-
-        #//Replace some characteres for html entities
-        for (my $i=0;$i<33;$i++) {
-                my $pattern = chr($i);
-                my $hex = ascii_to_html($i);
-                $value =~ s/$pattern/$hex/gi;
-        }
-
-        return $value;
-}
 
 ##########################################################################
 # SUB ascii_to_html (string)
